force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefix__mdt/fields/ucinn_ascendv2__Pledge_Gift_Stage_Query_Override__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_Gift_Stage_Query_Override__c</fullName>
    <description>Overrides the stage condition that is used to query for pledges/gifts.  Default is &apos;Active&apos;, &apos;Confirmed&apos;, &apos;Paid&apos; and &apos;Funded&apos;.  Format is [&quot;Funded&quot;,&quot;Active&quot;].</description>
    <inlineHelpText>Overrides the stage condition that is used to query for pledges/gifts.  Default is &apos;Active&apos;, &apos;Confirmed&apos;, &apos;Paid&apos; and &apos;Funded&apos;.  Format is [&quot;Funded&quot;,&quot;Active&quot;].</inlineHelpText>
    <label>Pledge/Gift Stage Query Override</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>