force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefix__mdt/fields/ucinn_ascendv2__Prefix__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Prefix__c</fullName>
    <description>Four digit letter used to denote the record type to use.  The external system ID must start with this prefix.</description>
    <inlineHelpText>Four digit letter used to denote the record type to use.  The external system ID must start with this prefix.</inlineHelpText>
    <label>Prefix</label>
    <length>4</length>
    <type>Text</type>
</CustomField>