force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefix__mdt/fields/ucinn_ascendv2__Process_Separately_From_Load__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Process_Separately_From_Load__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inserts review transaction records first and then uses future methods to process the records.</description>
    <inlineHelpText>Inserts review transaction records first and then uses future methods to process the records.</inlineHelpText>
    <label>Process Separately From Load</label>
    <type>Checkbox</type>
</CustomField>