force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefix__mdt/fields/ucinn_ascendv2__Record_Type_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Record_Type_API_Name__c</fullName>
    <description>The record type label that corresponds to the prefix value.</description>
    <inlineHelpText>The record type label that corresponds to the prefix value.</inlineHelpText>
    <label>Record Type Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>