force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefix__mdt/fields/ucinn_ascendv2__Review_Reason_for_Special_Conditions__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Review_Reason_for_Special_Conditions__c</fullName>
    <description>Custom manual review reason to be populated for filtered review transactions. If blank, will default to &quot;Flagged for Review.&quot;</description>
    <inlineHelpText>Custom manual review reason to be populated for filtered review transactions. If blank, will default to &quot;Flagged for Review.&quot;</inlineHelpText>
    <label>Review Reason for Special Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>