force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefix__mdt/fields/ucinn_ascendv2__Skip_Giving_Summary_Calculation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Skip_Giving_Summary_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(DEPRECATED)</description>
    <inlineHelpText>(DEPRECATED)</inlineHelpText>
    <label>Skip Giving Summary (DEPRECATED)</label>
    <type>Checkbox</type>
</CustomField>