force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefix__mdt/fields/ucinn_ascendv2__Special_Condition_Criteria_Field__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Special_Condition_Criteria_Field__c</fullName>
    <description>The field on the review transactions to filter by. Must evaluate to either true or false.</description>
    <inlineHelpText>The field on the review transactions to filter by. Must evaluate to either true or false.</inlineHelpText>
    <label>Special Condition Criteria Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>