force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefix__mdt/fields/ucinn_ascendv2__Stock_Field_Map__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Stock_Field_Map__c</fullName>
    <description>Map additional fields to be copied between the stock and review transaction. Format is {&quot;Stock Field API Name&quot;:&quot;Review Transaction Field API Name&quot;}.</description>
    <inlineHelpText>Map additional fields to be copied between the stock and review transaction. Format is {&quot;Stock Field API Name&quot;:&quot;Review Transaction Field API Name&quot;}.</inlineHelpText>
    <label>Stock Field Map</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>