force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefix__mdt/fields/ucinn_ascendv2__Summary_Prefix__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Summary_Prefix__c</fullName>
    <description>Prefix used to generate summary review transactions.</description>
    <inlineHelpText>Prefix used to generate summary review transactions.</inlineHelpText>
    <label>Summary Prefix</label>
    <length>4</length>
    <type>Text</type>
</CustomField>