force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefix__mdt/fields/ucinn_ascendv2__Use_Appeal_on_Gift_Pledge_Always__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Use_Appeal_on_Gift_Pledge_Always__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Always override appeal on review transaction with appeal specified on the pledge/gift.</description>
    <inlineHelpText>Always override appeal on review transaction with appeal specified on the pledge/gift.</inlineHelpText>
    <label>Use Appeal on Pledge/Gift Always</label>
    <type>Checkbox</type>
</CustomField>