force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefix__mdt/fields/ucinn_ascendv2__Use_Constituent_on_Pledge_Gift_Always__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Use_Constituent_on_Pledge_Gift_Always__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Always override constituent on review transaction with constituent specified on the pledge/gift.</description>
    <inlineHelpText>Always override constituent on review transaction with constituent specified on the pledge/gift.</inlineHelpText>
    <label>Use Constituent on Pledge/Gift Always</label>
    <type>Checkbox</type>
</CustomField>