force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefix__mdt/fields/ucinn_ascendv2__Use_Design_on_Pledge_Gift_if_No_Design__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Use_Design_on_Pledge_Gift_if_No_Design__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Override designations on review transaction with designations specified on the pledge/gift only if designations are not already specified.</description>
    <inlineHelpText>Override designations on review transaction with designations specified on the pledge/gift only if designations are not already specified.</inlineHelpText>
    <label>Use Design on Pledge/Gift if No Design</label>
    <type>Checkbox</type>
</CustomField>