force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefix__mdt/fields/ucinn_ascendv2__Use_Designation_on_Pledge_Gift_Always__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Use_Designation_on_Pledge_Gift_Always__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Always override designations on review transaction with designations specified on the pledge/gift.</description>
    <inlineHelpText>Always override designations on review transaction with designations specified on the pledge/gift.</inlineHelpText>
    <label>Use Designation on Pledge/Gift Always</label>
    <type>Checkbox</type>
</CustomField>