force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefix__mdt/fields/ucinn_ascendv2__Use_Existing_Most_Recent_Rate__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Use_Existing_Most_Recent_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Existing Most Recent Rate</label>
    <type>Checkbox</type>
</CustomField>