force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefix__mdt/fields/ucinn_ascendv2__Use_Pledge_for_Payment_Amount_Always__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Use_Pledge_for_Payment_Amount_Always__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Always use the pledge to determine the payment amount.  This is based on the next installment for each designation that has not been fully paid yet, or the amount for each designation if recurring gift.</description>
    <inlineHelpText>Always use the pledge to determine the payment amount.  This is based on the next installment for each designation that has not been fully paid yet, or the amount for each designation if recurring gift.</inlineHelpText>
    <label>Use Pledge for Payment Amount Always</label>
    <type>Checkbox</type>
</CustomField>