force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_Prefix__mdt/fields/ucinn_ascendv2__When_No_Pledge_Gift_Found__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__When_No_Pledge_Gift_Found__c</fullName>
    <inlineHelpText>Handles the case when both Create Gift If Pledge Is Not Found and Match Designation If No Pledge/Gift is checked. It will prioritize the option selected when no pledge/gift is found.</inlineHelpText>
    <label>When No Pledge/Gift Found (DEPR)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create Gift</fullName>
                <default>true</default>
                <label>Create Gift</label>
            </value>
            <value>
                <fullName>Match Designation Before Create Gift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>